manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo
          image: outisa/todo-application:dd1f9e69a91fba94de45fa91e7387a2ed4393f30
          volumeMounts:
            - mountPath: /app/files
              name: shared-image
